[gd_scene load_steps=17 format=3 uid="uid://c1p3wx0cao6sb"]

[ext_resource type="Script" path="res://Player/Weapons/cannonball.gd" id="1_c12qf"]
[ext_resource type="Texture2D" uid="uid://ct20s4gvcxsoh" path="res://game_textures/item/weapons/Cannonball/cannonball.png" id="2_u5fp8"]
[ext_resource type="Texture2D" uid="uid://c24ev6mtbsu0g" path="res://game_textures/item/weapons/explosion.png" id="3_5kbnh"]
[ext_resource type="AudioStream" uid="uid://dshmrj06tmuv7" path="res://Sounds/desert_pack/explosion-1.ogg" id="4_n6ehr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onqvj"]
atlas = ExtResource("2_u5fp8")
region = Rect2(0, 0, 28, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj24o"]
atlas = ExtResource("3_5kbnh")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d6od"]
atlas = ExtResource("3_5kbnh")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qojx"]
atlas = ExtResource("3_5kbnh")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m053t"]
atlas = ExtResource("3_5kbnh")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cphw"]
atlas = ExtResource("3_5kbnh")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3m7e"]
atlas = ExtResource("3_5kbnh")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdeyv"]
atlas = ExtResource("3_5kbnh")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcyws"]
atlas = ExtResource("3_5kbnh")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_8j3wu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onqvj")
}],
"loop": false,
"name": &"cannonball",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj24o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d6od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qojx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m053t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cphw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3m7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdeyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcyws")
}],
"loop": false,
"name": &"explode",
"speed": 10.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_kalr3"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_2m583"]
radius = 3.0

[node name="cannonball" type="Area3D"]
collision_mask = 14
script = ExtResource("1_c12qf")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3.258, 0, 0, 0, 3.57, 0, 0, 0)
billboard = 2
sprite_frames = SubResource("SpriteFrames_8j3wu")
animation = &"cannonball"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_kalr3")

[node name="splashdamage" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="splashdamage"]
shape = SubResource("SphereShape3D_2m583")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="explosion" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_n6ehr")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="splashdamage" to="." method="_on_splashdamage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
